clean up and fixing date issue on mobile

--- a/src/UIKit/UIActionButton/UIActionButton.css
+++ b/src/UIKit/UIActionButton/UIActionButton.css
@@ -14,7 +14,7 @@
 
 .action-button__heart:hover,
 .action-button__heart:active {
-  color: rgb(240, 10, 10);
+  color: red;
 }
 
 .action-button__info:hover,
